lyricue3 (3.0.9.2-1) maverick; urgency=low

  * Enable word-wrap by default for songs

 -- Chris Debenham <chris@adebenham.com>  Mon, 20 Sep 2010 17:30:00 +1000

lyricue3 (3.0.9.1-1) maverick; urgency=low

  * Add .desktop files

 -- Chris Debenham <chris@adebenham.com>  Fri, 15 Sep 2010 17:30:00 +1000

lyricue3 (3.0.9-1) maverick; urgency=low

  * Initial work at dvd support
  * Add preview window to edit/add song dialog

 -- Chris Debenham <chris@adebenham.com>  Thu, 15 Sep 2010 17:30:00 +1000

lyricue3 (3.0.8.6-1) maverick; urgency=low

  * Force writing of config to db every startup (LP#636731)
  * Re-add lyricue_remote command
  * Let lyricue_display use GeometryOverride if set

 -- Chris Debenham <chris@adebenham.com>  Wed, 15 Sep 2010 17:30:00 +1000

lyricue3 (3.0.8.5-1) maverick; urgency=low

  * Get lyricue_display to reload config when saving prefs in lyricue
  * Implement OSD functionality

 -- Chris Debenham <chris@adebenham.com>  Wed, 15 Sep 2010 17:30:00 +1000

lyricue3 (3.0.8.4-1) maverick; urgency=medium

  * Fix loading lyricue_display from apps menu
  * Save first config to database

 -- Chris Debenham <chris@adebenham.com>  Sun, 12 Sep 2010 17:31:00 +1000

lyricue3 (3.0.8.3-1) maverick; urgency=low

  * Change some install dependancies
  * Make interface work at 1024x600

 -- Chris Debenham <chris@adebenham.com>  Wed, 5 Sep 2010 17:31:00 +1000

lyricue3 (3.0.8.3-1) maverick; urgency=low

  * Fix status message to return proper screen size
  * Fix blank handling after preview

 -- Chris Debenham <chris@adebenham.com>  Wed, 5 Sep 2010 17:31:00 +1000

lyricue3 (3.0.8.2-1) maverick; urgency=low

  * Fix missing files

 -- Chris Debenham <chris@adebenham.com>  Tue, 5 Sep 2010 17:31:00 +1000

lyricue3 (3.0.8-1) maverick; urgency=low

  * Make presentation import retry if fails
  * Store presentation temp files in /var/tmp instead of /tmp
  * Packaging changes
  * Implement dbimage loading
  * Don't try to set the geometry if it is null