@@ -8,7 +8,7 @@ Homepage: http://www.adebenham.com/
 
 Package: lyricue3
 Architecture: any
-Depends: libclutter-perl, libgstreamer-perl, unoconv, libdbd-mysql-perl, libgtk2-perl, libgtk2-gladexml-perl, libgtk2-spell-perl, libgtk2-trayicon-perl, libdbi-perl, libglib-perl, imagemagick|graphicsmagick-imagemagick-compat, libxml-simple-perl, diatheke, libgnome2-perl, libjson-glib-1.0-0, ${misc:Depends}, ${perl:Depends}, ${shlibs:Depends}
+Depends: libclutter-perl, libgstreamer-perl, unoconv, libdbd-mysql-perl, libgtk2-perl, libgtk2-gladexml-perl, libgtk2-spell-perl, libgtk2-trayicon-perl, libdbi-perl, libglib-perl, imagemagick|graphicsmagick-imagemagick-compat, libxml-simple-perl, diatheke, libgnome2-perl, libjson-glib-1.0-0, lsdvd,  ${misc:Depends}, ${perl:Depends}, ${shlibs:Depends}
 Recommends: mysql-server
 Conflicts: lyricue, lyricue-cvs
 Description: The GNU Lyric Display System
