@@ -1,8 +1,11 @@
 lyricue3 (3.0.9.2-1) maverick; urgency=low
 
   * Enable word-wrap by default for songs
+  * Add lsdvd to dependancies
+  * Report port number is process name
+  * Fix crash when going back past first item
 
- -- Chris Debenham <chris@adebenham.com>  Mon, 20 Sep 2010 17:30:00 +1000
+ -- Chris Debenham <chris@adebenham.com>  Wed, 22 Sep 2010 17:30:00 +1000
 
 lyricue3 (3.0.9.1-1) maverick; urgency=low
 
